# searchsaga

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SearchSaga-PRD-v2.docx.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.shiplog/: config.json
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  manifest.ts
apps/web/src/app/(content)/: layout.tsx  page.tsx
apps/web/src/app/(content)/demo/: page.tsx
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/demo/: card-renderer.tsx  cousin-card.tsx  depth-transition.tsx  galaxy-minimap.tsx  stage-navigator.tsx  swipeable-card.tsx  topic-deck.tsx
apps/web/src/components/demo/cards/: breathing.tsx  connection.tsx  interaction.tsx  moment.tsx  stage-marker.tsx  surprise.tsx
apps/web/src/data/: camera.ts  glass.ts  sand.ts  topics.ts
apps/web/src/lib/: utils.ts
docs/: PRD.md  PROGRESS.md  SECURITY.md  SPECS.md
services/content-pipeline/: package.json  pyproject.toml
services/content-pipeline/src/searchsaga_pipeline/: __init__.py  config.py  main.py
services/content-pipeline/src/searchsaga_pipeline/agents/: __init__.py  card_architect.py  connector.py  editor.py  publisher.py  researcher.py  storyteller.py  visual_architect.py
services/content-pipeline/src/searchsaga_pipeline/guardians/: __init__.py  context_shield.py  word_shield.py
services/content-pipeline/src/searchsaga_pipeline/models/: __init__.py  topic.py
services/content-pipeline/src/searchsaga_pipeline/voice/: __init__.py  voice_agent.py
(+2 files in other folders)
